--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
-    //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-
-    //Firebase Core
-    implementation 'com.google.firebase:firebase-core:17.2.2'
-
-    //Firebase Cloud storage
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
-
     //Glide
     implementation "com.github.bumptech.glide:glide:4.10.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.10.0"
@@ -61,6 +52,12 @@ dependencies {
 
     //ViewModelProviders
     implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
+
 
     //RxJAva
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
